--- a/home.html
+++ b/home.html
@@ -10,7 +10,8 @@
     <!-- JS -->
     <script src="navi.js"></script>
     <!-- Bootstrap CSS -->
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <!-- Fontawesome CSS-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css"
         integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
@@ -196,64 +197,64 @@
                 </div>
                 <!-- Content 4 -->
             </div>
-                <div class="row about-text no-gutters">
-                    <div class="col-12 col-xl-6 about-text-content uppercase">
-                        <p>I have alvays been interested in processes and in the act of creation itself.</p>
-                        <p>My passion for music (and music making) has let me to exploring the relationship
-                            between music production/composition and choreography/movement generation. I am
-                            looking for a palyful balanced encompassing the freedom and the dynamics of a
-                            concert
-                            with
-                            the (hidden) precision of a choreographed piece.</p>
+            <div class="row about-text no-gutters">
+                <div class="col-12 col-xl-6 about-text-content uppercase">
+                    <p>I have alvays been interested in processes and in the act of creation itself.</p>
+                    <p>My passion for music (and music making) has let me to exploring the relationship
+                        between music production/composition and choreography/movement generation. I am
+                        looking for a palyful balanced encompassing the freedom and the dynamics of a
+                        concert
+                        with
+                        the (hidden) precision of a choreographed piece.</p>
 
-                        <p>I consider my work to be atmospheric and immersive. I create physical, visual and
-                            aural
-                            landscapes, like a collection of moods that replicate current socio-political
-                            issues
-                            with
-                            some references to art and /or pop clture addd to the mix.</p>
+                    <p>I consider my work to be atmospheric and immersive. I create physical, visual and
+                        aural
+                        landscapes, like a collection of moods that replicate current socio-political
+                        issues
+                        with
+                        some references to art and /or pop clture addd to the mix.</p>
 
-                        <p>In prepareation for my upcoming work (still untitled), and counting the path
-                            opened by my
-                            latest piece 'Choreopop', I am developing a creative and scoring method (called
-                            'Musicography')
-                            that will serve as a generator for physical/aural outcomes.</p>
+                    <p>In prepareation for my upcoming work (still untitled), and counting the path
+                        opened by my
+                        latest piece 'Choreopop', I am developing a creative and scoring method (called
+                        'Musicography')
+                        that will serve as a generator for physical/aural outcomes.</p>
 
-                        <p>In 2012/13 I participated in Spazio, a European programme for dance makers.
-                            Currently I am supported artist at ICK and Dansmakers, both located in Amterdam.
-                        </p>
+                    <p>In 2012/13 I participated in Spazio, a European programme for dance makers.
+                        Currently I am supported artist at ICK and Dansmakers, both located in Amterdam.
+                    </p>
 
-                        <p>As a dancer I have worked with companies and choreographers such as ICK, Galili
-                            Dance,
-                            Iceland Dance Company,
-                            Metros, Stephen Shropshire, André Gingras, Sylvain Emard and Václav Kuneš
-                            amongst
-                            others. I
-                            workded as well as a dance teacher/coach, giving workshops or imparting classes
-                            for
-                            instituions like Fontys, AHK, Artez, Codarts, Norrdans, ICK, HJS, Akbank Sanat
-                            (Turkey),
-                            NSCD (Leeds), CAD (Seville) etc. to name but a few.</p>
+                    <p>As a dancer I have worked with companies and choreographers such as ICK, Galili
+                        Dance,
+                        Iceland Dance Company,
+                        Metros, Stephen Shropshire, André Gingras, Sylvain Emard and Václav Kuneš
+                        amongst
+                        others. I
+                        workded as well as a dance teacher/coach, giving workshops or imparting classes
+                        for
+                        instituions like Fontys, AHK, Artez, Codarts, Norrdans, ICK, HJS, Akbank Sanat
+                        (Turkey),
+                        NSCD (Leeds), CAD (Seville) etc. to name but a few.</p>
 
-                        <p>My work has toured accross The Netherlands and has been among others programmed
-                            in
-                            theaters
-                            like Frascati, Meervaart, Bellevue, Korzo, NWE Vorst, Grand Theater Groningen,
-                            Parktheater.
-                            I also have had a priviledge to to show my work at Dutch festivals like Mundial,
-                            Nazomerfestival, Boulevard Festival and The Nederlandse Dansdagen as an example.
-                            Internationally, I had the change to show in Istanbul and premiere a work in the
-                            U.K.
-                        </p>
+                    <p>My work has toured accross The Netherlands and has been among others programmed
+                        in
+                        theaters
+                        like Frascati, Meervaart, Bellevue, Korzo, NWE Vorst, Grand Theater Groningen,
+                        Parktheater.
+                        I also have had a priviledge to to show my work at Dutch festivals like Mundial,
+                        Nazomerfestival, Boulevard Festival and The Nederlandse Dansdagen as an example.
+                        Internationally, I had the change to show in Istanbul and premiere a work in the
+                        U.K.
+                    </p>
 
-                        <p>I was born in the Canry Islands (Spain) and I am currently based in Amsterdam
-                            (The
-                            Netherlands)</p>
-                    </div>
-
+                    <p>I was born in the Canry Islands (Spain) and I am currently based in Amsterdam
+                        (The
+                        Netherlands)</p>
                 </div>
+
             </div>
-        
+        </div>
+
     </section>
 
     <!-- Divider 4 -->
@@ -303,13 +304,14 @@
                                         <h5>Contact me here. I will get back to you at the earliest!</h5>
                                     </section>
                                     <div class="form-group">
-                                        <textarea class="form-control" id="FormControlTextarea" name="message" rows="4" maxlength="6000"
-                                            placeholder="Message" required></textarea>
+                                        <textarea class="form-control" id="FormControlTextarea" name="message" rows="4"
+                                            maxlength="6000" placeholder="Message" required></textarea>
                                     </div>
                                     <div class="form-group" id="InputName">
                                         <div class="row no-gutters m-0">
                                             <div class="col">
-                                                <input type="text" class="form-control" id="name" placeholder="Name" required>
+                                                <input type="text" class="form-control" id="name" placeholder="Name"
+                                                    required>
                                             </div>
 
                                         </div>
@@ -376,7 +378,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
     </script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js" integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"
+        integrity="sha384-xrRywqdh3PHs8keKZN+8zzc5TX0GRTLCcmivcbNJWm2rs5C8PRhcEn3czEjhAO9o" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
